<resources>
    <string name="app_name">Habitica </string>
    <string name="action_refresh">Refresh</string>
    <string name="XP_default">Experience</string>
    <string name="HP_default">Health</string>
    <string name="MP_default">Mana</string>
    <string name="ERR_pb_barcode">Prefs couldn\'t be loaded from the barcode</string>
    <string name="PS_settings_title">Settings</string>
    <string name="SP_address_hint">Your custom server</string>
    <string name="SP_userID_title">User ID</string>
    <string name="SP_userID_summary">Your User ID</string>
    <string name="SP_APIToken_title">API Token</string>
    <string name="SP_APIToken_summary">Your API Token</string>
    <string name="Language_title">Language</string>
    <string name="Language_summary">Change Habitica\'s language</string>
    <string name="SP_user_qr_code">Your QR Code</string>
    <string name="PS_contact_title">Contact me</string>
    <string name="unknown_error">An error happened…</string>
    <string name="pref_account_header">Account</string>
    <string name="pref_first_day_of_the_week_title">First Day of the Week</string>
    <string name="pref_first_day_of_the_week_summary">First day of the week in all calendars</string>
    <string name="pref_first_day_of_the_week_default_value" translatable="false">1</string>
    <string name="pref_first_day_of_the_week_key" translatable="false">FirstDayOfTheWeek</string>
    <string name="pref_reminder_header">Daily Reminder</string>
    <string name="pref_reminder_checkbox">Activate Reminder</string>
    <string name="pref_reminder_picker">Set Reminder Time</string>
    <string name="pref_cds_header">Custom Day Start</string>
    <string name="pref_cds_picker">Set Custom Day Start Time</string>
    <string name="pref_push_notifications_checkbox">User Push Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="preference_push_you_won_challenge">You won a Challenge!</string>
    <string name="preference_push_received_a_private_message">Received a Private Message</string>
    <string name="preference_push_gifted_gems">Gifted Gems</string>
    <string name="preference_push_gifted_subscription">Gifted Subscription</string>
    <string name="preference_push_invited_to_party">Invited to Party</string>
    <string name="preference_push_invited_to_guild">Invited to Guild</string>
    <string name="preference_push_your_quest_has_begun">Your Quest has Begun</string>
    <string name="preference_push_invited_to_quest">Invited to Quest</string>
    <string name="task_value">Value</string>
    <string name="new_todo">New todo</string>
    <string name="new_reward">New reward</string>
    <string name="new_daily">New daily</string>
    <string name="new_habit">New habit</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="username">Username</string>
    <string name="email_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="emailAddress">Email address</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="logout">Logout</string>
    <string name="logout_description">Log out of your account</string>
    <string name="account_details">Account Details</string>
    <string name="LoginActivityName">Welcome</string>
    <string name="string_revive">Revive</string>
    <string name="please_connect">Please connect through the application before using a widget</string>
    <string name="about.title">About</string>
    <string name="about.libraries">Libraries</string>
    <string name="about.versionhistory">Version history</string>
    <string name="about.habitica_open_source">Habitica is available as open source software on Github</string>
    <string name="about.rate_our_app">Rate our App</string>
    <string name="about.give_us_feedback">Send us Feedback!</string>
    <string name="about.bugreport">Report a Bug</string>
    <string name="about.source_code">Source Code</string>
    <string name="network_error_title">Connection Error</string>
    <string name="network_error_no_network_body">You are not connected to the internet.</string>
    <string name="internal_error_api">There seems to be a problem with the server. Try again later.</string>
    <string name="authentication_error_title">Authentication Error</string>
    <string name="authentication_error_body">Your Username and/or Password was incorrect.</string>
    <string name="login_validation_error_title">Validation Error</string>
    <string name="login_validation_error_fieldsmissing">You have to fill out all fields.</string>
    <string name="save_changes">Save</string>
    <string name="copy">Copy</string>
    <string name="notes">Notes</string>
    <string name="text">Text</string>
    <string name="difficulty">Difficulty</string>
    <string name="tags">Tags</string>
    <string name="trivial">Trivial</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="start_date">Start Date</string>
    <string name="positive_habit_form">Positive ( + )</string>
    <string name="negative_habit_form">Negative ( - )</string>
    <string name="checklist">Checklist</string>
    <string name="reminders">Reminders</string>
    <string name="actions">Actions</string>
    <string name="attributes">Attributes</string>
    <string name="physical">Physical</string>
    <string name="mental">Mental</string>
    <string name="social">Social</string>
    <string name="other">Other</string>
    <string name="frequency">Frequency</string>
    <string name="frequency_weekly">On Certain Days of the Week</string>
    <string name="frequency_daily">Every X Days</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="levelup_header">You gained a level!</string>
    <string name="levelup_detail">By accomplishing your real-life goals, you\'ve grown to Level %1$d!</string>
    <string name="levelup_health">You have been fully healed!</string>
    <string name="levelup_button">Huzzah!</string>
    <string name="faint_subtitle">Don\'t despair!</string>
    <string name="faint_penalty_body">You lost a Level, your Gold, and a piece of Equipment, but you can get them all back with hard work! Good luck--you\'ll do great.</string>
    <string name="faint_header">You ran out of Health!</string>
    <string name="faint_button">Refill Health &amp; Try Again</string>
    <string name="filter">Filter</string>
    <string name="profile_image">Profile Image</string>
    <string name="mana_price_button" formatted="false">%d MP</string>
    <string name="used_skill" formatted="false">You used %1$s for %2$d mana.</string>
    <string name="used_skill_without_mana" formatted="false">You used %1$s.</string>
    <string name="new_checklist_item">new checklist item</string>
    <string name="add_checklist_item">Add</string>
    <string name="reminder_title">Remember to check off your Dailies!</string>
    <string name="skill_progress_title">Using Skill</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="chat_flag_confirmation">Are you sure you want to report this message for violation?</string>
    <string name="flag_confirm">Flag Message</string>
    <string name="unlock_lvl_11">Unlock at lvl 11</string>
    <string name="no_party_message">You are not in a party. To join a party, please visit the website.</string>
    <string name="forgot_pw_btn">Forgot Password</string>
    <string name="forgot_pw_tv">Forgot Password? Please use the mobile Website.</string>
    <string name="tavern.inn.checkOut">Reactivate your Dailies</string>
    <string name="tavern.inn.rest">Pause your Dailies</string>
    <string name="reward.dialog.buy">Buy</string>
    <string name="reward.dialog.dismiss">Dismiss</string>
    <string name="party">Party</string>
    <string name="chat">Chat</string>
    <string name="members">Members</string>
    <string name="habits">Habits</string>
    <string name="dailies">Dailies</string>
    <string name="todos">Todos</string>
    <string name="rewards">Rewards</string>
    <string name="taskform.delete.title">Are you sure?</string>
    <string name="taskform.delete.message">Do you really want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quest">Quest</string>
    <string name="avatar_body">Body</string>
    <string name="avatar_hair">Hair</string>
    <string name="avatar_shirt">Shirt</string>
    <string name="avatar_skin">Skin</string>
    <string name="avatar_ears">Animal Ears</string>
    <string name="avatar_base">Base</string>
    <string name="avatar_color">Color</string>
    <string name="avatar_beard">Beard</string>
    <string name="avatar_mustache">Mustache</string>
    <string name="avatar_flower">Flower</string>
    <string name="avatar_bangs">Bangs</string>
    <string name="avatar_nothing">Nothing set</string>
    <string name="avatar_size">Size</string>
    <string name="avatar_size_slim">Slim</string>
    <string name="avatar_size_broad">Broad</string>
    <string name="avatar_background">Background</string>
    <string name="purchase_customization">Purchase Customization</string>
    <string name="purchase_set_button" formatted="false">Unlock set for %d gems</string>
    <string name="purchase_button">Purchase</string>
    <string name="purchase_set_title" formatted="false">Purchase set %s</string>
    <string name="due_date">Due Date</string>
    <string name="quest.accept">Accept</string>
    <string name="quest.reject">Reject</string>
    <string name="quest.begin">Begin Quest</string>
    <string name="quest.cancel">Cancel Invitation</string>
    <string name="quest.abort">Abort Quest</string>
    <string name="quest.leave">Leave Quest</string>
    <string name="quest.pending">Pending</string>
    <string name="quest.accepted">Accepted</string>
    <string name="quest.rejected">Rejected</string>
    <string name="quest.participants">Participants</string>
    <string name="version_info" formatted="false">Version %s (%d)</string>
    <string name="sidebar_help">Help &amp; FAQ</string>
    <string name="complete_tutorial">Got it!</string>
    <string name="dismiss_tutorial">Remind me again</string>
    <string name="intro_1_title">Welcome to Habitica</string>
    <string name="intro_1_description" formatted="false">Join over %s people having fun while getting things done. Create an avatar and track your real-life tasks.</string>
    <string name="intro_2_title">Game Progress = Life Progress</string>
    <string name="intro_2_description">Unlock features in the game by checking off your real-life tasks. Earn armor, pets, and more to reward you for meeting your goals!</string>
    <string name="intro_3_title">Get Social and Fight Monsters</string>
    <string name="intro_3_description">Keep your goals on track with help from your friends. Support each other in life and in battle as you improve together!</string>
    <string name="intro_finish_button">Get Started</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="skip_button">Skip</string>
    <string name="setup_welcome_description">Welcome to Habitica, where advancing in the game will improve your real life! As you accomplish real-world goals, you\'ll unlock equipment, pets, quests, and more.</string>
    <string name="setup_welcome_title">Welcome</string>
</resources>