<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/login.linear.layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="40dp"
        android:paddingTop="40dp"
        android:shrinkColumns="0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_span="2"
                android:src="@drawable/ic_gryphon"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:src="@drawable/ic_habitica"/>
        </TableRow>

        <TableRow
            android:id="@+id/username_row"
            style="@style/LoginRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:layout_marginRight="4dp"
                android:src="@drawable/ic_username"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="@dimen/login_field_width"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:singleLine="true"
                />

        </TableRow>

        <TableRow
            android:id="@+id/email_row"
            style="@style/LoginRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:layout_marginRight="4dp"
                android:src="@drawable/ic_email"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="@dimen/login_field_width"
                android:layout_height="wrap_content"
                android:hint="@string/emailAddress"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"/>
        </TableRow>

        <TableRow
            android:id="@+id/password_row"
            style="@style/LoginRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:layout_marginRight="4dp"
                android:src="@drawable/ic_password"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="@dimen/login_field_width"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true"
            />
        </TableRow>

        <TableRow
            android:id="@+id/confirm_password_row"
            style="@style/LoginRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:layout_marginRight="4dp"
                android:src="@drawable/ic_password"/>

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="@dimen/login_field_width"
                android:layout_height="wrap_content"
                android:hint="@string/confirmpassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_span="2"
                    android:background="@drawable/rounded_purple_square"
                    android:text="@string/register_btn"
                    android:textColor="@color/white"
                    />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

                <ProgressBar
                    android:id="@+id/PB_AsyncTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_span="2"
                    android:indeterminate="true"
                    android:visibility="gone"
                    />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">
            <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"

                    android:layout_span="2"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/forgot_pw_tv"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_span="2"
                android:text="@string/forgot_pw_tv"
                android:textColor="@color/best_10"
                />
        </TableRow>
    </TableLayout>

</ScrollView>